--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -1,6 +1,5 @@
 version: "3.4"
 
-# Production environment override
 services:
   php:
     ports:
@@ -8,6 +7,7 @@ services:
     build: 
       context: .
       dockerfile: Dockerfile.prod
+      target: frankenphp_prod
     environment:
       APP_SECRET: 801f338ea4f4ddf21c8a004e21686cce
       MERCURE_PUBLISHER_JWT_KEY: test
